# labtasker

./: .coverage  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pytest.ini  Dockerfile  Justfile  MANIFEST.in  Makefile  README.md  client.example.env  cov.xml  coverage.xml  docker-compose.yml  lcov.info  pre-commit-config.yaml  process_variables.py  pyproject.toml  server.example.env  setup.cfg  tox.ini  versions.json
.agents/skills/: labtasker
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: deploy-doc.yml  full-test-coverage.yml  lint.yml  mypy-check.yml  pre-commit.yml  push-ghcr.yml  release.yml  test-doc.yml  unit-test-coverage.yml  unit-test-matrix.yml
.labtasker/: client.env
0.0.1/search/: search_index.json
data/: example_input.txt  variable_table.json
dev/: 404.html  index.html
dev/faq/: index.html
dev/search/: search_index.json
docker/mongodb/: init-mongo.sh
docs/: Justfile  Makefile  macros.py  mkdocs-base.yml  mkdocs-nav.yml  mkdocs.yml
docs/docs/: faq.md  index.md
docs/site/: 404.html  index.html
grammar/: LabCmd.interp  LabCmd.py  LabCmdLexer.g4  LabCmdLexer.interp  LabCmdLexer.py  LabCmdLexer.tokens  LabCmdListener.py
labtasker/: __init__.py  __main__.py  api_models.py  client.py  config.py  constants.py  database.py  dependencies.py  filtering.py  fsm.py  security.py  server.py  utils.py
labtasker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
labtasker/cli/: commands.py
labtasker/client/: _client_api.py  client_api.py
labtasker/server/: config.py  database.py  db_utils.py  dependencies.py  embedded_db.py  endpoints.py  event_manager.py  fsm.py  run.py  server.py
plugins/labtasker_cli_task_count/: pyproject.toml
skills/labtasker/: SKILL.md
tests/: conftest.py  demo_pager_iterator.py  docker-compose.yml  docker-compose.yml.bak  test_cli.py  test_cli_utils.py  test_client.py  test_database.py  test_filtering.py  test_fsm.py  test_mock_time.py  test_parser.py  test_security.py  test_server.py  test_utils.py
tests/dummy_jobs/: job_1.py
tests/fixtures/: fixture_database.py
tests/test_cli/: conftest.py  test_basic.py  test_config.py  test_queue.py  test_task.py  test_worker.py
tests/test_client/: conftest.py
tests/test_core/: test_pager_iterator.py
tests/test_database/: conftest.py  test_benchmark_threadpool.py  (+2 more)
v0.1.3/: 404.html  index.html
v0.2.11/: index.html
v0.2.13/: 404.html
v0.2.2/: index.html
v0.2.5/: index.html
v0.2.6/: 404.html
v0.2.7/: 404.html
v0.2.8/: index.html
v1.0.0/: 404.html  index.html
v1.0.1/: 404.html  index.html
(+221 files in other folders)
