[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "labtasker"
version = "0.1.0"
description = "A task queue system for lab experiments"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<4.0"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "pymongo>=4.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "click>=8.0.0",
    "passlib>=1.7.0",
    "bcrypt>=4.0.0",
    "antlr4-python3-runtime>=4.13.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.24.0",
    "typer>=0.15.0",
    "loguru>=0.7.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "mongomock>=4.1.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "freezegun>=1.5.0",
    "pytest-docker>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "asgi-lifespan>=2.1.0",
    "tox>=4.23.2",
    "respx>=0.22.0"
]
doc = [
    "mkdocs-material>=9.0.0",
    "mike>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/labtasker"
Documentation = "https://labtasker.readthedocs.io"
Repository = "https://github.com/yourusername/labtasker.git"

[project.scripts]
labtasker = "labtasker.__main__:app"

#[project.entry-points."labtasker.commands"]
#config = "labtasker.cli.commands:config"
#create-queue = "labtasker.cli.commands:create_queue"
#submit = "labtasker.cli.commands:submit"
#fetch = "labtasker.cli.commands:fetch"

[tool.setuptools]
packages = ["labtasker"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["labtasker"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
strict = true
